[package]
name = "nj"
version = "0.2.1"
authors = ["fluvio.io"]
edition = "2018"

[features]
example = []


[dependencies]
nj-sys = { path = "nj-sys" }
nj-core = { path = "nj-core" }
nj-example-hello = { path = "example-hello", optional = true }
nj-example-hello-cb = { path = "example-hello-cb", optional = true }
nj-example-hello-async-cb = { path = "example-hello-async-cb", optional = true }
nj-example-wrapper = { path = "example-wrapper", optional = true }
nj-example-wrap-async = { path = "example-wrap-async", optional = true }