[package]
name = "nj-sys-example-hello-async-cb"
version = "0.0.1"
authors = ["fluvio.io"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
ctor = "0.1.12"
libc = "0.2.66"
byte-strings = "0.1.3"
nj-sys = { path = "../nj-sys" }
nj-core = { path = "../nj-core"}
flv-future-core = { path = "../../future-helper" }